--- a/scss/utilities/_index.scss
+++ b/scss/utilities/_index.scss
@@ -1,5 +1,11 @@
+@forward 'box-shadow';
 @forward 'colors';
 @forward 'container';
+@forward 'flex-group';
+@forward 'flow';
+@forward 'font-families';
 @forward 'font-sizes';
 @forward 'font-weights';
 @forward 'sizes';
+@forward 'text-center';
+@forward 'uppercase';
