--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -12,7 +12,7 @@
 }
 
 .button[data-type='accent'] {
-  background-color: clr('neutral', '400');
+  background-color: clr('primary', '400');
   color: clr('neutral', '900');
 }
 
