--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,2 +1,7 @@
 @forward 'buttons';
-@forward 'section-heading';
+@forward 'card';
+@forward 'hero';
+@forward 'interactive-figure';
+@forward 'navigation';
+@forward 'primary-header';
+@forward 'section-header';
