--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -7,20 +7,27 @@
   text-transform: uppercase;
   line-height: 1;
   border: 0;
+  font-weight: fw('bold');
 
   padding: 1.125em 2em;
-}
+  transition: 275ms ease;
 
-.button[data-type='accent'] {
-  background-color: clr('primary', '400');
-  color: clr('neutral', '900');
-}
+  &[data-type='accent'] {
+    background-color: clr('primary', '400');
+    color: clr('neutral', '900');
+  }
 
-.button[data-type='outline'] {
-  --outline-size: 5px;
+  &[data-type='outline'] {
+    --outline-size: 5px;
 
-  background-color: transparent;
-  color: clr('neutral', '100');
-  outline: var(--outline-size) solid clr('neutral', '100');
-  outline-offset: calc(var(--outline-size) * -1);
+    background-color: transparent;
+    color: clr('neutral', '100');
+    outline: var(--outline-size) solid clr('neutral', '100');
+    outline-offset: calc(var(--outline-size) * -1);
+  }
+
+  &:is(:hover, :focus) {
+    background: clr('neutral', '100');
+    color: clr('neutral', '900');
+  }
 }
