--- a/scss/utilities/_font-sizes.scss
+++ b/scss/utilities/_font-sizes.scss
@@ -3,5 +3,9 @@
 @each $size-name, $size-value in $font-sizes {
   .fs-#{$size-name} {
     font-size: $size-value;
+
+    @if to_number($size-name) > 600 {
+      line-height: 1.1;
+    }
   }
 }
