--- a/scss/utilities/_index.scss
+++ b/scss/utilities/_index.scss
@@ -7,6 +7,7 @@
 @forward 'font-sizes';
 @forward 'font-weights';
 @forward 'lead';
-@forward 'sizes';
+@forward 'shift-up';
+@forward 'spacing';
 @forward 'text-center';
 @forward 'uppercase';
