--- a/scss/utilities/_spacing.scss
+++ b/scss/utilities/_spacing.scss
@@ -1,10 +1,10 @@
 @use '../abstracts' as *;
 
-.section {
+.region {
   padding-block: $padding-section;
 }
 
-.hero {
+.region-xl {
   padding-block: $padding-hero;
 }
 
